k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghanawaters-api
  labels:
    app: ghanawaters-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghanawaters-api
  template:
    metadata:
      labels:
        app: ghanawaters-api
    spec:
      containers:
      - name: ghanawaters-api
        image: ghananauticalinfo/ghanawaters-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
