k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghanawaters-api-service
spec:
  selector:
    app: ghanawaters-api
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
